# latch-plugin-unix

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
debian/: README.Debian  changelog  conffiles  control  copyright  dirs  latch.conf  libpam-latch.config  libpam-latch.install  libpam-latch.postinst  libpam-latch.substvarsold  libpam-latch.templates  rules
examples/: setup.sh
examples/OSX/: setup.sh
examples/OSX/Users/user/ssh/: authorized_keys
examples/OSX/etc/pam.d/: authorization  login  sshd  su  sudo
examples/centos/: setup.sh
examples/centos/etc/pam.d/: gdm-password  password-auth-login-latch  password-auth-sshd-latch  sshd  su  system-auth-su-latch  system-auth-sudo-latch
examples/centos/etc/ssh/: sshd_config
examples/debian/: setup.sh
examples/debian/etc/latch/: latch.conf
examples/debian/etc/pam.d/: gdm3  gdm3-autologin  sshd  su
examples/debian/home/user/ssh/: authorized_keys
examples/fedora/: setup.sh
examples/fedora/etc/latch/: latch.conf
examples/fedora/etc/pam.d/: gdm-password  password-auth-login-latch  password-auth-sshd-latch  sshd  su  sudo  system-auth-su-latch  system-auth-sudo-latch
examples/fedora/etc/ssh/: sshd_config
examples/fedora/selinux/: authlogin_latch.pp  authlogin_latch.te  log_latch.pp  log_latch.te
examples/freeBSD/etc/pam.d/: login  sshd  su  system-login-latch  system-su-latch
examples/freeBSD/etc/ssh/: sshd_config
examples/ubuntu/: setup.sh
examples/ubuntu/etc/latch/: latch.conf
examples/ubuntu/etc/pam.d/: lightdm  lightdm-autologin  login  sudo
examples/ubuntu/etc/ssh/: sshd_config
lib/: charset.c  charset.h  drop_privs.c  drop_privs.h  latch.c  latch.h  util.c  util.h
modules/SSH/SELinux/: latch_ssh.pp  latch_ssh.te
modules/SSH/src/: Makefile.am  Makefile.in  latch_shell.c  latch_ssh_command.c
pam/: Makefile.am  Makefile.in  latch-test.c  pam_latch.c  test.c  test_pam.c
src/: Makefile.am  Makefile.in  latch_unix.c  latch_unix.h
test/TODO/SSH/: readme
test/TODO/installation_test/: check_configure.sh
test/black-box_test/: informe_pruebas_ssh.template  readme  test.sh
test/black-box_test/python/: latch.py  pairwithid.py
test/integration_test/: README.md  adduser.sh  latchtest.py
test/internal_test/: informe_pruebas_latch.template  readme  sshd.exp  test.sh
test/internal_test/certs/: id_rsa_testlatch.pub
test/unit_test/: AllTests.c  CUnitAllTest.c  CUnitCharsetSuite.c  CUnitCharsetSuite.h  CUnitDropPrivsSuite.c  CUnitDropPrivsSuite.h  CUnitUtilSuite.c  CUnitUtilSuite.h  CharsetTest.c  Makefile  README  README.md  UtilTest.c  makefile  readme  test.accounts  test.conf
test/white-box_test/: readme
test/white-box_test/latch/: all_no_sudo_test.sh  all_test.sh  responses.sh  test_accounts_access_error.sh  test_config_access_error.sh  test_generating_token.sh  test_op_status_invalid_account_id.sh  test_op_status_invalid_app_and_secret.sh  test_op_status_invalid_operation_id.sh  test_op_status_not_operation.sh  test_op_status_not_paired.sh  test_op_status_without_acc_file.sh  test_pair_bad_char_token.sh  test_pair_bad_length_token.sh  test_pair_invalid_app_and_secret.sh  test_pair_invalid_token.sh  test_status_invalid_account_id.sh  test_status_invalid_app_and_secret.sh  test_status_not_paired.sh  test_status_without_acc_file.sh  test_unpair_not_paired.sh  test_unpair_succ_with_other_same_acc_id_user.sh  test_unpair_success.sh  test_unpair_without_acc_file.sh  test_without_network.sh
